fixed jumping and overscroll

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -144,12 +144,6 @@ html, body {
 }
 
 html {
-    overflow: hidden;
-    height: 100%;
-}
-
-body {
-    overflow: auto;
-    height: 100%;
-}
+	overscroll-behavior: none;
+  }
 
